--- a/lab1/pages/field.html
+++ b/lab1/pages/field.html
@@ -14,31 +14,108 @@
             </div>
         </div> 
         <div class="field-container-field">
-            <table class="checks">
-                <tr>
-                    <td>1</td>2<td>3</td><td></td><td></td><td></td><td></td><td></td><td></td>
-                </tr>
-                <tr>
-                    <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                </tr>
-                <tr>
-                    <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                </tr>
-                <tr>
-                    <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                </tr>
-                <tr>
-                    <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                </tr>
-                <tr>
-                    <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                </tr>
-                <tr>
-                    <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                </tr>
-                <tr>
-                    <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                </tr>
+            <table class="board">
+                <tbody>
+                    <tr>
+                        <th></th>
+                        <th>a</th>
+                        <th>b</th>
+                        <th>c</th>
+                        <th>d</th>
+                        <th>e</th>
+                        <th>f</th>
+                        <th>g</th>
+                        <th>h</th>
+                    </tr>
+                    <tr>
+                        <th>8</th>
+                        <td id="8a"></td>
+                        <td id="8b"></td>
+                        <td id="8c"></td>
+                        <td id="8d"></td>
+                        <td id="8e"></td>
+                        <td id="8f"></td>
+                        <td id="8g"></td>
+                        <td id="8h"></td>
+                    </tr>
+                    <tr>
+                        <th>7</th>
+                        <td id="7a"></td>
+                        <td id="7b"></td>
+                        <td id="7c"></td>
+                        <td id="7d"></td>
+                        <td id="7e"></td>
+                        <td id="7f"></td>
+                        <td id="7g"></td>
+                        <td id="7h"></td>
+                    </tr>
+                    <tr>
+                        <th>6</th>
+                        <td id="6a"></td>
+                        <td id="6b"></td>
+                        <td id="6c"></td>
+                        <td id="6d"></td>
+                        <td id="6e"></td>
+                        <td id="6f"></td>
+                        <td id="6g"></td>
+                        <td id="6h"></td>
+                    </tr>
+                    <tr>
+                        <th>5</th>
+                        <td id="5a"></td>
+                        <td id="5b"></td>
+                        <td id="5c"></td>
+                        <td id="5d"></td>
+                        <td id="5e"></td>
+                        <td id="5f"></td>
+                        <td id="5g"></td>
+                        <td id="5h"></td>
+                    </tr>
+                    <tr>
+                        <th>4</th>
+                        <td id="4a"></td>
+                        <td id="4b"></td>
+                        <td id="4c"></td>
+                        <td id="4d"></td>
+                        <td id="4e"></td>
+                        <td id="4f"></td>
+                        <td id="4g"></td>
+                        <td id="4h"></td>
+                    </tr>
+                    <tr>
+                        <th>3</th>
+                        <td id="3a"></td>
+                        <td id="3b"></td>
+                        <td id="3c"></td>
+                        <td id="3d"></td>
+                        <td id="3e"></td>
+                        <td id="3f"></td>
+                        <td id="3g"></td>
+                        <td id="3h"></td>
+                    </tr>
+                    <tr>
+                        <th>2</th>
+                        <td id="2a"></td>
+                        <td id="2b"></td>
+                        <td id="2c"></td>
+                        <td id="2d"></td>
+                        <td id="2e"></td>
+                        <td id="2f"></td>
+                        <td id="2g"></td>
+                        <td id="2h"></td>
+                    </tr>
+                    <tr>
+                        <th>1</th>
+                        <td id="1a"></td>
+                        <td id="1b"></td>
+                        <td id="1c"></td>
+                        <td id="1d"></td>
+                        <td id="1e"></td>
+                        <td id="1f"></td>
+                        <td id="1g"></td>
+                        <td id="1h"></td>
+                    </tr>
+                </tbody>
             </table>
         </div>
     </body>
