--- a/lab1/pages/field.html
+++ b/lab1/pages/field.html
@@ -9,7 +9,7 @@
         <div class="nav-container-field">
             <div class="nav-field">
                 <a class="nav-button-field" href="index.html">Главная</a>
-                <a class="nav-button-field" href="rules.html">Правила</a>
+                <a class="nav-button-field" href="about.html">Подробнее</a>
                 <a class="nav-button-field" href="field.html">Играть</a>
             </div>
         </div> 
@@ -118,5 +118,16 @@
                 </tbody>
             </table>
         </div>
+        <footer class="footer">
+            <div class="copyright">
+                &copy; Copyright 2022. All rights reserved.
+                Контактная информация:
+                <ul>
+                    <li>+79963962553</li>
+                    <li>privalovmihail2@gmail.com</li>
+                </ul>
+                Привалов Михаил Андреевич
+            </div>
+        </footer>
     </body>
 </html>
