--- a/lab1/pages/index.html
+++ b/lab1/pages/index.html
@@ -9,9 +9,20 @@
         <div class="container-main">
             <div class="nav-main">
                 <a class="nav-button-main" href="index.html">Главная</a>
-                <a class="nav-button-main" href="rules.html">Правила</a>
+                <a class="nav-button-main" href="about.html">Подробнее</a>
                 <a class="nav-button-main" href="field.html">Играть</a>
             </div>
         </div> 
+        <footer class="footer">
+            <div class="copyright">
+                &copy; Copyright 2022. All rights reserved.
+                Контактная информация:
+                <ul>
+                    <li>+79963962553</li>
+                    <li>privalovmihail2@gmail.com</li>
+                </ul>
+                Привалов Михаил Андреевич
+            </div>
+        </footer>
     </body>
 </html>
