--- a/lab1/pages/about.html
+++ b/lab1/pages/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Подробнее</title>
-        <link rel = "stylesheet" href="../styles/rules_styles.css"/>
+        <link rel = "stylesheet" href="../styles/about_styles.css"/>
     </head>
     <body>
         <nav class = "container-rules">
@@ -14,10 +14,12 @@
             </div>
         </nav>
 
-        <aside>
-            <a class="nav-button-rules" href="rules.html">Правила игры</a>
-            <a class="nav-button-rules" href="game_recording.html">Способы записи игры</a>
-        </aside>
+        <div class="section-container">
+            <div class="section">
+                <a class="button" href="rules.html">Правила игры</a>
+                <a class="button" href="game_recording.html">Способы записи игры</a>
+            </div>
+        </div>
 
         <footer class="footer">
             <div class="copyright">
