--- a/lab1/pages/field.html
+++ b/lab1/pages/field.html
@@ -30,35 +30,35 @@
                     <tr>
                         <th>8</th>
                         <td id="8a"></td>
-                        <td id="8b"></td>
+                        <td id="8b"><img src="https://cdn-icons-png.flaticon.com/512/0/14.png" width="50" height="50"></td>
                         <td id="8c"></td>
-                        <td id="8d"></td>
+                        <td id="8d"><img src="https://cdn-icons-png.flaticon.com/512/0/14.png" width="50" height="50"></td>
                         <td id="8e"></td>
-                        <td id="8f"></td>
+                        <td id="8f"><img src="https://cdn-icons-png.flaticon.com/512/0/14.png" width="50" height="50"></td>
                         <td id="8g"></td>
-                        <td id="8h"></td>
+                        <td id="8h"><img src="https://cdn-icons-png.flaticon.com/512/0/14.png" width="50" height="50"></td>
                     </tr>
                     <tr>
                         <th>7</th>
-                        <td id="7a"></td>
+                        <td id="7a"><img src="https://cdn-icons-png.flaticon.com/512/0/14.png" width="50" height="50"></td>
                         <td id="7b"></td>
-                        <td id="7c"></td>
+                        <td id="7c"><img src="https://cdn-icons-png.flaticon.com/512/0/14.png" width="50" height="50"></td>
                         <td id="7d"></td>
-                        <td id="7e"></td>
+                        <td id="7e"><img src="https://cdn-icons-png.flaticon.com/512/0/14.png" width="50" height="50"></td>
                         <td id="7f"></td>
-                        <td id="7g"></td>
+                        <td id="7g"><img src="https://cdn-icons-png.flaticon.com/512/0/14.png" width="50" height="50"></td>
                         <td id="7h"></td>
                     </tr>
                     <tr>
                         <th>6</th>
                         <td id="6a"></td>
-                        <td id="6b"></td>
+                        <td id="6b"><img src="https://cdn-icons-png.flaticon.com/512/0/14.png" width="50" height="50"></td>
                         <td id="6c"></td>
-                        <td id="6d"></td>
+                        <td id="6d"><img src="https://cdn-icons-png.flaticon.com/512/0/14.png" width="50" height="50"></td>
                         <td id="6e"></td>
-                        <td id="6f"></td>
+                        <td id="6f"><img src="https://cdn-icons-png.flaticon.com/512/0/14.png" width="50" height="50"></td>
                         <td id="6g"></td>
-                        <td id="6h"></td>
+                        <td id="6h"><img src="https://cdn-icons-png.flaticon.com/512/0/14.png" width="50" height="50"></td>
                     </tr>
                     <tr>
                         <th>5</th>
@@ -84,35 +84,35 @@
                     </tr>
                     <tr>
                         <th>3</th>
-                        <td id="3a"></td>
+                        <td id="3a"><img src="https://cdn-0.emojis.wiki/emoji-pics/google/white-circle-google.png" width="50" height="50"></td>
                         <td id="3b"></td>
-                        <td id="3c"></td>
+                        <td id="3c"><img src="https://cdn-0.emojis.wiki/emoji-pics/google/white-circle-google.png" width="50" height="50"></td>
                         <td id="3d"></td>
-                        <td id="3e"></td>
+                        <td id="3e"><img src="https://cdn-0.emojis.wiki/emoji-pics/google/white-circle-google.png" width="50" height="50"></td>
                         <td id="3f"></td>
-                        <td id="3g"></td>
+                        <td id="3g"><img src="https://cdn-0.emojis.wiki/emoji-pics/google/white-circle-google.png" width="50" height="50"></td>
                         <td id="3h"></td>
                     </tr>
                     <tr>
                         <th>2</th>
                         <td id="2a"></td>
-                        <td id="2b"></td>
+                        <td id="2b"><img src="https://cdn-0.emojis.wiki/emoji-pics/google/white-circle-google.png" width="50" height="50"></td>
                         <td id="2c"></td>
-                        <td id="2d"></td>
+                        <td id="2d"><img src="https://cdn-0.emojis.wiki/emoji-pics/google/white-circle-google.png" width="50" height="50"></td>
                         <td id="2e"></td>
-                        <td id="2f"></td>
+                        <td id="2f"><img src="https://cdn-0.emojis.wiki/emoji-pics/google/white-circle-google.png" width="50" height="50"></td>
                         <td id="2g"></td>
-                        <td id="2h"></td>
+                        <td id="2h"><img src="https://cdn-0.emojis.wiki/emoji-pics/google/white-circle-google.png" width="50" height="50"></td>
                     </tr>
                     <tr>
                         <th>1</th>
-                        <td id="1a"></td>
+                        <td id="1a"><img src="https://cdn-0.emojis.wiki/emoji-pics/google/white-circle-google.png" width="50" height="50"></td>
                         <td id="1b"></td>
-                        <td id="1c"></td>
+                        <td id="1c"><img src="https://cdn-0.emojis.wiki/emoji-pics/google/white-circle-google.png" width="50" height="50"></td>
                         <td id="1d"></td>
-                        <td id="1e"></td>
+                        <td id="1e"><img src="https://cdn-0.emojis.wiki/emoji-pics/google/white-circle-google.png" width="50" height="50"></td>
                         <td id="1f"></td>
-                        <td id="1g"></td>
+                        <td id="1g"><img src="https://cdn-0.emojis.wiki/emoji-pics/google/white-circle-google.png" width="50" height="50"></td>
                         <td id="1h"></td>
                     </tr>
                 </tbody>
