--- a/lab2/pages/about.html
+++ b/lab2/pages/about.html
@@ -7,16 +7,20 @@
     </head>
     <body>
         <header>Онлайн шашки</header>
-        <nav>
-            <a class="button" href="index.html">Главная</a>
-            <a class="button" href="about.html">Подробнее</a>
-            <a class="button" href="field.html">Играть</a>
-        </nav>
+        <div class="container">
+            <nav>
+                <a class="button" href="index.html">Главная</a>
+                <a class="button" href="about.html">Подробнее</a>
+                <a class="button" href="field.html">Играть</a>
+            </nav>
 
-        <aside>
-            <a class="button" href="rules.html">Правила игры</a>
-            <a class="button" href="game_recording.html">Способы записи игры</a>
-        </aside>
+            <aside>
+                <section>
+                    <a class="button" href="rules.html">Правила игры</a>
+                    <a class="button" href="game_recording.html">Способы записи игры</a>
+                </section>
+            </aside>
+        </div>
 
         <footer class="footer">
             <div class="copyright">
