--- a/lab2/pages/game_recording.html
+++ b/lab2/pages/game_recording.html
@@ -7,54 +7,59 @@
     </head>
     <body>
         <header>Онлайн шашки</header>
-        <nav>
-            <a class="button" href="index.html">Главная</a>
-            <a class="button" href="about.html">Подробнее</a>
-            <a class="button" href="field.html">Играть</a>
-        </nav>
+        <div class="container">
+            <nav>
+                <a class="button" href="index.html">Главная</a>
+                <a class="button" href="about.html">Подробнее</a>
+                <a class="button" href="field.html">Играть</a>
+            </nav>
 
-        <section>
-            <a class="button" href="rules.html">Правила игры</a>
-            <a class="button" href="game_recording.html">Способы записи игры</a>
-        </section>
+            <article>
+                <p class="header">Способы записи партии</p>
+                Во время игры в большинстве соревнований каждый игрок должен вести точную запись своей партии.<br>
+                Ходы в партии записываются по правилам шашечной нотации.<br>
 
-        <div class="text">
-            <p class="header">Способы записи партии</p>
-            Во время игры в большинстве соревнований каждый игрок должен вести точную запись своей партии.<br>
-            Ходы в партии записываются по правилам шашечной нотации.<br>
+                <strong>Координаты доски</strong><br><br>
 
-            <strong>Координаты доски</strong><br><br>
+                Для записи ходов в русских шашках используется следующая система условных обозначений полей игровой доски.<br>
+                <img src="http://ru64.sibhost.ru/images/note1.png" width="400" height="400"><br>
+                Восемь горизонталей доски, начиная со стороны белых, обозначаются цифрами от 1 до 8, а восемь вертикалей доски, слева направо, латинскими буквами от a до h.<br>
+                Каждое поле доски обозначается сочетанием буквы и цифры, указывающим вертикаль и горизонталь,<br>
+                 на пересечении которых оно расположено.<br>
 
-            Для записи ходов в русских шашках используется следующая система условных обозначений полей игровой доски.<br>
-            <img src="http://ru64.sibhost.ru/images/note1.png" width="400" height="400"><br>
-            Восемь горизонталей доски, начиная со стороны белых, обозначаются цифрами от 1 до 8, а восемь вертикалей доски, слева направо, латинскими буквами от a до h.<br>
-            Каждое поле доски обозначается сочетанием буквы и цифры, указывающим вертикаль и горизонталь, на пересечении которых оно расположено.<br>
+                В следующем примере белая шашка стоит на поле d4, а черная на поле f6:<br>
+                <img src="http://ru64.sibhost.ru/images/note2.png" width="400" height="400"><br>
 
-            В следующем примере белая шашка стоит на поле d4, а черная на поле f6:<br>
-            <img src="http://ru64.sibhost.ru/images/note2.png" width="400" height="400"><br>
+                <strong>Полная запись</strong><br><br>
 
-            <strong>Полная запись</strong><br><br>
+                Для записи хода шашки сначала указывается поле, на котором она стояла, а затем через дефис ("‑") указывается поле, на которое шашка ставится.<br>
+                Пример записи хода: c3-d4.<br>
 
-            Для записи хода шашки сначала указывается поле, на котором она стояла, а затем через дефис ("‑") указывается поле, на которое шашка ставится.<br>
-            Пример записи хода: c3-d4.<br>
+                Для записи взятия вместо дефиса используется двоеточие (":").<br><br>
+                Пример записи взятия: b6:d4.<br>
 
-            Для записи взятия вместо дефиса используется двоеточие (":").<br><br>
-            Пример записи взятия: b6:d4.<br>
+                При записи партии ход белых и ход черных нумеруются как один ход, и обычно записываются в столбик, слева указывается ход белых, справа - ход черных.<br>
 
-            При записи партии ход белых и ход черных нумеруются как один ход, и обычно записываются в столбик, слева указывается ход белых, справа - ход черных.<br>
+                Примерная запись партии может выглядеть так:<br>
 
-            Примерная запись партии может выглядеть так:<br>
+                Белые:   Черные:<br>
+                Иванов   Петров<br>
 
-            Белые:   Черные:<br>
-            Иванов   Петров<br>
+                1. e3-d4 d6-c5<br>
+                2. f2-e3 f6-g5<br>
+                3. c3-b4 g5-h4<br>
+                4. b4:d6 h4:f2<br>
+                5. e1:g3 c7:h4<br>
 
-            1. e3-d4 d6-c5<br>
-            2. f2-e3 f6-g5<br>
-            3. c3-b4 g5-h4<br>
-            4. b4:d6 h4:f2<br>
-            5. e1:g3 c7:h4<br>
+                Белые сдались<br>
+            </article>
 
-            Белые сдались<br>
+            <aside>
+                <section>
+                    <a class="button" href="rules.html">Правила игры</a>
+                    <a class="button" href="game_recording.html">Способы записи игры</a>
+                </section>
+            </aside>
         </div>
 
         <footer class="footer">
