--- a/lab3/index.html
+++ b/lab3/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8" />
         <title>Онлайн-игра Шашки</title>
-        <link rel="stylesheet" href="../css/main_styles.css">
+        <link rel="stylesheet" href="css/main_styles.css">
     </head>
     <body>
         <header>Онлайн шашки</header>
         <nav>
-            <a class="button" href="index.html">Главная</a>
-            <a class="button" href="about.html">Подробнее</a>
-            <a class="button" href="field.html">Играть</a>
+            <a class="button" href="pages/index.html">Главная</a>
+            <a class="button" href="pages/about.html">Подробнее</a>
+            <a class="button" href="pages/field.html">Играть</a>
         </nav> 
 
         <div class="container-main"></div>
