--- a/lab3/pages/about.html
+++ b/lab3/pages/about.html
@@ -9,7 +9,7 @@
         <header>Онлайн шашки</header>
         <div class="container">
             <nav>
-                <a class="button" href="index.html">Главная</a>
+                <a class="button" href="../index.html">Главная</a>
                 <a class="button" href="about.html">Подробнее</a>
                 <a class="button" href="field.html">Играть</a>
             </nav>
