--- a/lab3/pages/rules.html
+++ b/lab3/pages/rules.html
@@ -10,7 +10,7 @@
 
         <div class="container">
             <nav>
-                <a class="button" href="index.html">Главная</a>
+                <a class="button" href="../index.html">Главная</a>
                 <a class="button" href="about.html">Подробнее</a>
                 <a class="button" href="field.html">Играть</a>
             </nav>
