--- a/lab3/pages/field.html
+++ b/lab3/pages/field.html
@@ -32,91 +32,91 @@
                     </tr>
                     <tr>
                         <th>8</th>
-                        <td id="a8"><div></div></td>
-                        <td id="b8"><div></div></td>
-                        <td id="c8"><div></div></td>
-                        <td id="d8"><div></div></td>
-                        <td id="e8"><div></div></td>
-                        <td id="f8"><div></div></td>
-                        <td id="g8"><div></div></td>
-                        <td id="h8"><div></div></td>
+                        <td id="07"><div></div></td>
+                        <td id="17"><div></div></td>
+                        <td id="27"><div></div></td>
+                        <td id="37"><div></div></td>
+                        <td id="47"><div></div></td>
+                        <td id="57"><div></div></td>
+                        <td id="67"><div></div></td>
+                        <td id="77"><div></div></td>
                     </tr>
                     <tr>
                         <th>7</th>
-                        <td id="a7"><div></div></td>
-                        <td id="b7"><div></div></td>
-                        <td id="c7"><div></div></td>
-                        <td id="d7"><div></div></td>
-                        <td id="e7"><div></div></td>
-                        <td id="f7"><div></div></td>
-                        <td id="g7"><div></div></td>
-                        <td id="h7"><div></div></td>
+                        <td id="06"><div></div></td>
+                        <td id="16"><div></div></td>
+                        <td id="26"><div></div></td>
+                        <td id="36"><div></div></td>
+                        <td id="46"><div></div></td>
+                        <td id="56"><div></div></td>
+                        <td id="66"><div></div></td>
+                        <td id="76"><div></div></td>
                     </tr>
                     <tr>
                         <th>6</th>
-                        <td id="a6"><div></div></td>
-                        <td id="b6"><div></div></td>
-                        <td id="c6"><div></div></td>
-                        <td id="d6"><div></div></td>
-                        <td id="e6"><div></div></td>
-                        <td id="f6"><div></div></td>
-                        <td id="g6"><div></div></td>
-                        <td id="h6"><div></div></td>
+                        <td id="05"><div></div></td>
+                        <td id="15"><div></div></td>
+                        <td id="25"><div></div></td>
+                        <td id="35"><div></div></td>
+                        <td id="45"><div></div></td>
+                        <td id="55"><div></div></td>
+                        <td id="65"><div></div></td>
+                        <td id="75"><div></div></td>
                     </tr>
                     <tr>
                         <th>5</th>
-                        <td id="a5"><div></div></td>
-                        <td id="b5"><div></div></td>
-                        <td id="c5"><div></div></td>
-                        <td id="d5"><div></div></td>
-                        <td id="e5"><div></div></td>
-                        <td id="f5"><div></div></td>
-                        <td id="g5"><div></div></td>
-                        <td id="h5"><div></div></td>
+                        <td id="04"><div></div></td>
+                        <td id="14"><div></div></td>
+                        <td id="24"><div></div></td>
+                        <td id="34"><div></div></td>
+                        <td id="44"><div></div></td>
+                        <td id="54"><div></div></td>
+                        <td id="64"><div></div></td>
+                        <td id="74"><div></div></td>
                     </tr>
                     <tr>
                         <th>4</th>
-                        <td id="a4"><div></div></td>
-                        <td id="b4"><div></div></td>
-                        <td id="c4"><div></div></td>
-                        <td id="d4"><div></div></td>
-                        <td id="e4"><div></div></td>
-                        <td id="f4"><div></div></td>
-                        <td id="g4"><div></div></td>
-                        <td id="h4"><div></div></td>
+                        <td id="03"><div></div></td>
+                        <td id="13"><div></div></td>
+                        <td id="23"><div></div></td>
+                        <td id="33"><div></div></td>
+                        <td id="43"><div></div></td>
+                        <td id="53"><div></div></td>
+                        <td id="63"><div></div></td>
+                        <td id="73"><div></div></td>
                     </tr>
                     <tr>
                         <th>3</th>
-                        <td id="a3"><div></div></td>
-                        <td id="b3"><div></div></td>
-                        <td id="c3"><div></div></td>
-                        <td id="d3"><div></div></td>
-                        <td id="e3"><div></div></td>
-                        <td id="f3"><div></div></td>
-                        <td id="g3"><div></div></td>
-                        <td id="h3"><div></div></td>
+                        <td id="02"><div></div></td>
+                        <td id="12"><div></div></td>
+                        <td id="22"><div></div></td>
+                        <td id="32"><div></div></td>
+                        <td id="42"><div></div></td>
+                        <td id="52"><div></div></td>
+                        <td id="62"><div></div></td>
+                        <td id="72"><div></div></td>
                     </tr>
                     <tr>
                         <th>2</th>
-                        <td id="a2"><div></div></td>
-                        <td id="b2"><div></div></td>
-                        <td id="c2"><div></div></td>
-                        <td id="d2"><div></div></td>
-                        <td id="e2"><div></div></td>
-                        <td id="f2"><div></div></td>
-                        <td id="g2"><div></div></td>
-                        <td id="h2"><div></div></td>
+                        <td id="01"><div></div></td>
+                        <td id="11"><div></div></td>
+                        <td id="21"><div></div></td>
+                        <td id="31"><div></div></td>
+                        <td id="41"><div></div></td>
+                        <td id="51"><div></div></td>
+                        <td id="61"><div></div></td>
+                        <td id="71"><div></div></td>
                     </tr>
                     <tr>
                         <th>1</th>
-                        <td id="a1"><div></div></td>
-                        <td id="b1"><div></div></td>
-                        <td id="c1"><div></div></td>
-                        <td id="d1"><div></div></td>
-                        <td id="e1"><div></div></td>
-                        <td id="f1"><div></div></td>
-                        <td id="g1"><div></div></td>
-                        <td id="h1"><div></div></td>
+                        <td id="00"><div></div></td>
+                        <td id="10"><div></div></td>
+                        <td id="20"><div></div></td>
+                        <td id="30"><div></div></td>
+                        <td id="40"><div></div></td>
+                        <td id="50"><div></div></td>
+                        <td id="60"><div></div></td>
+                        <td id="70"><div></div></td>
                     </tr>
                 </tbody>
             </table>
