--- a/lab4/pages/field.html
+++ b/lab4/pages/field.html
@@ -22,6 +22,7 @@
         </div>
 
         <div class="container">
+            <div class="container-left"></div>
             <table class="board">
                 <tbody>
                     <tr>
@@ -125,8 +126,10 @@
                     </tr>
                 </tbody>
             </table>
-
-            <div class="game-recording-container"></div>
+            <div class="game-recording-container">
+                <p>Запись</p>
+                <textarea id="game-record"></textarea>
+            </div>
         </div>
 
         <div class="button-end-container">
