--- a/lab5/pages/field.html
+++ b/lab5/pages/field.html
@@ -130,7 +130,7 @@
                 <p>Запись</p>
                 <textarea id="game-record"></textarea>
                 <button onclick="showPiecesPlacement()">Показать</button>
-                <p id="record-error"></p>
+                <div id="record-error" class="record-error"></div>
             </div>
         </div>
 
