--- a/lab5/pages/field.html
+++ b/lab5/pages/field.html
@@ -135,7 +135,7 @@
         </div>
 
         <div class="button-end-container">
-            <button onclick="endTurn()">Завершить ход</button>
+            <button onclick="endTurn(true)">Завершить ход</button>
             <button onclick="board.cancelTurn()">Отменить ход</button>
         </div>
 
